tests/analyzer/errors/invalid_binop.ray
fn main() {
    _ = 0.6 - true
    _ = null * -5
    _ = 1 + "foo"

    _ = 5 < null
    _ = false >= -67.8
    _ = "foo" >= 65.2

   _ = 1 == true 
   _ = "str" == true 
   _ = false == 5.6 
   _ = 34 == "str"
}

